Atualizações na responsividade e requisições do usuário

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			href="https://fonts.googleapis.com/icon?family=Material+Icons"
 		/>
 
-		<title>Projeto React</title>
+		<title>Projeto Integração BE</title>
 	</head>
 	<body>
 		<div id="root"></div>
